# quip

./: LICENSE  README.md  build.py  client.js
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/src/: capture.py  visible_windows.py  webrtc.py
backend/static/: index.html
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AppGrid.jsx  AppGrid.module.css  AudioDeviceList.jsx  AudioDeviceList.module.css  ChecklistModal.jsx  ChecklistModal.module.css  ExtraOptions.jsx  ExtraOptions.module.css  LandingScreen.jsx  LandingScreen.module.css  ShareScreen.jsx  ShareScreen.module.css  StreamView.jsx  StreamView.module.css
frontend/src/hooks/: useWebRTC.js
src/: capture.py  quip.py  test_capture.py  visible_windows.py  webrtc.py
static/: client.js  index.html
