[project]
name = "quip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "opencv-python>=4.13.0.92",
    "pywin32>=311",
    "sounddevice>=0.5.5",
    "windows-capture>=1.5.0",
]
