[project]
name = "quip"
version = "0.1.0"
description = "Stream your application to browser tab, not sure why anyone would need that but there you go"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pywin32>=311",
    "sounddevice>=0.5.5",
    "windows-capture>=1.5.0",
]

[project.optional-dependencies]
redaction = [
    "presidio-image-redactor>=0.0.58",
    "en-core-web-lg",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
